--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.2.1",
     "react": "^18.3.1",
+    "react-scripts": "^5.0.1"
     "react-dom": "^18.3.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
